--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=IPSTWiFi
-version=1.0.
+name=IPST-WiFi
+version=1.0.0
 author=
 maintainer=
-sentence=A control library for IPST WiFi.
-paragraph=This library easy to read input and control output on JuniorBOT. 
-category=Signal Input/Output
-url=https://github.com/Phetja
+sentence=A control library for IPST-WiFi board.
+paragraph=This library makes it easy to read sensors and control outputs on the IPST-WiFi board, including Wi-Fi, OLED, buttons, and other peripherals.
+category=Communication
+url=https://github.com/ThamachotInex
 architectures=*
